Fix wildcard returns